  - feature : add ELV IPWE1 support

- Peter S. Mon Jun 02 00:39 MET 2008
  - linux.html: openSUSE 11 contains our changes.

- Thu Jun 12 07:15:03 MEST 2008
  - feature: FileLog get to read logfiles / webpgm2: gnuplot-scroll mode to
    navigate/zoom in logfiles
    webpgm2 uses the FileLog get to grep data for a given data range from a
    logfile. Using this grep scrolling to a different date range / zooming
    to another resolution (day/week/month/year) can be implemented.
    The logfiles should be large, as scrolling across logfiles is not
    implemented. To speed up the grep, a binary search with seek is used, and
    seek positions are cached.

- Thu Jul 11 07:15:03 MEST 2008
  - feature: 99_SVG.pm for webpgm2: generates SVG from the logfile.
    Generating SVG is configurable, the "old" gnuplot mode is still there.
    Downside of the SVG: the browser must support SVG (Firefox/Opera does,
    I.E. with the Adobe plugin), and the browsesr consumes more memory.
    Upside: no gnuplot needed on the server, faster(?), less data to transfer
    for daily data.
    Tested with Firefox 3.0.
    Todo: Test with IE+Adobe Plugin/Opera.
  - feature: HOWTO for webpgm2 (first chapter)

Fri Jul 25 18:14:26 MEST 2008
  - Autoloading modules. In order to make module installation easier and
    to optimize memory usage, modules are loaded when the first device of a
    certain category is defined. Exceptions are the modules prefixed with 99,
    these are considered "utility" modules and are loaded at the beginning.
    Some of the older 99_x modules were renamed (99_SVG, 99_dummy), and most
    contrib modules were moved to the main FHEM directory.

- Boris Sat Nov 01 CET 2008
  - feature: new commands fullinit and reopen for FHZ, commandref.html update
  - bugfix: avoid access to undefined NotifyFn in hash in fhem.pl

- Boris Sun Nov 02 CET 2008
  - feature: new modules 00_CM11.pm and 20_X10.pm for integration of X10
    devices in fhem
  - feature: X10 support for pgm3